package com.directi.training.isp.exercise;

public interface IDoor
{
    void lock();

    void unlock();

    void open();

    void close();   
}
