package com.directi.training.isp.exercise.sol;

import com.directi.training.isp.exercise.IDoor;

public interface ISensingDoor extends IDoor{
    void proximityCallback();
}
