package com.directi.training.isp.exercise.sol;

public interface ITimedDoor extends IDoor{

    void timeOutCallback();
}

